<resources>

    <!-- Class Detail / Assignment Fragment -->
    <string name="class_info_label">Class Information</string>
    <string name="class_icon_description">Class Icon</string>
    <string name="class_title_label">Class Title</string>
    <string name="class_code_label">Class Code</string>
    <string name="total_assignments_label">Total Assignments</string>
    <string name="assignment_list_label">Assignments</string>

    <!-- Class List / Courses Fragment -->
    <string name="class_info">Class Info</string>
    <string name="class_icon_desc">Class Icon</string>
    <string name="class_title">Class Title</string>
    <string name="class_code">Class Code</string>
    <string name="total_classes">Total Classes</string>
    <string name="total_assignments">Total Assignments</string>

    <!-- Shared UI -->
    <string name="add_class">Add Class</string>
    <string name="add_task">Add Task</string>
    <string name="share">Share</string>
    <string name="take_photo">Take Photo</string>
    <string name="task_photo">Assignment Photo</string>
    <string name="task_icon">Task Icon</string>
    <string name="status">Status</string>
    <string name="app_name">ClassTracker</string>


    <string name="task_dialog_title">Add Assignment</string>
    <string name="task_dialog_positive">Add</string>
    <string name="task_dialog_negative">Cancel</string>
    <string name="no_classes_added_yet">No classes added yet</string>
    <string name="classes_0_assignments_0">Classes: 0, Assignments: 0</string>
    <string name="completed_0_0">Completed: 0 / 0</string>
    <string name="task_type">Task Type</string>
    <string name="enter_task_name">Enter task name</string>
    <string name="_0_0_tasks_completed">0 / 0 tasks completed</string>
    <string name="status_completed">Status: Completed</string>
    <string name="task_title">Task Title</string>


</resources>
