<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".ClassListFragment">

        <TextView
            android:id="@+id/summaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed_0_0"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:progress="0"
            android:max="100"
            app:layout_constraintTop_toBottomOf="@id/summaryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/classStats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classes_0_assignments_0"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addClassButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:contentDescription="@string/add_class"
            android:src="@drawable/ic_add"
            app:backgroundTint="@color/teal_700"
            app:tint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/classRecycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            app:layout_constraintTop_toBottomOf="@id/classStats"
            app:layout_constraintBottom_toTopOf="@id/addClassButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/list_item_class" />

        <TextView
            android:id="@+id/noClassText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_classes_added_yet"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/noClassAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_class"
            android:visibility="gone"
            app:icon="@drawable/ic_add"
            app:layout_constraintTop_toBottomOf="@id/noClassText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
